# aineko

./: .gitignore  .pre-commit-config.yaml  .vale.ini  LICENSE  Makefile  README.md  SUMMARY.md  contributing-to-aineko.md  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  playground.py  pyproject.toml  quick-start.md  versions.json  yamllint.yaml
.circleci/: config.yml  markdown-links-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.internals/: check_license.py
0.1/: 404.html  index.html  sitemap.xml
0.1/aineko_cloud/: index.html
0.1/contributing/: index.html
0.1/quickstart/: index.html
0.1/troubleshooting/: index.html
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/aineko_dream/: index.html
0.2/community/: index.html
0.2/contributing/: index.html
0.2/contributing_docs/: index.html
0.2/extras/: index.html
0.2/quickstart/: index.html
0.2/search/: search_index.json
0.2/stylesheets/: extra.css
0.2/troubleshooting/: index.html
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/aineko_dream/: index.html
0.3/community/: index.html
0.3/search/: search_index.json
aineko/: __init__.py  __main__.py  config.py
aineko/amber/: __init__.py  alerts.py  comparisons.py  metrics.py
aineko/cli/: DockerCLIWrapper.py  KafkaCLIWrapper.py  build.py  cli.py  create_pipeline.py  docker_cli_wrapper.py  dream.py  kafka_cli_wrapper.py  provision.py  run.py  validate.py  visualize.py
aineko/core/: config_loader.py  dataset.py  dataset_orig.py  deploy_config_loader.py  internal_nodes.py  node.py  node_manager.py  provisioner.py  runner.py
aineko/datasets/: core.py  kafka.py  kafka_dataset.py
aineko/extras/: __init__.py
aineko/models/: __init__.py  base.py  config_schema.py  dataset_config_schema.py  deploy_config.py  deploy_config_schema.py  deploy_config_schema_internal.py  project_config_schema.py  validations.py
aineko/templates/: README.md
aineko/templates/first_aineko_pipeline/{{cookiecutter.project_slug}}/: .gitignore  README.md  deploy.yml  docker-compose.yml  pyproject.toml
aineko/templates/first_aineko_pipeline/{{cookiecutter.project_slug}}/conf/: pipeline.yml
aineko/templates/first_aineko_pipeline/{{cookiecutter.project_slug}}/tests/: conftest.py  test_nodes.py
aineko/templates/first_aineko_pipeline/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  nodes.py
aineko/utils/: imports.py  io.py  misc.py  secrets.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev-guide/: README.md  aineko-cli.md  building-a-pipeline.md  concepts.md  quick-start.md  tutorial-writing-a-pipeline-to-do-x.md
dev-guide/quick-start/: README.md  deeper-dive.md
dev/aineko_cloud/: index.html
dev/aineko_dream/: index.html
dev/community/: index.html
dev/contributing/: index.html
dev/contributing_docs/: index.html
dev/extras/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
develop/aineko_cloud/: index.html
develop/contributing/: index.html
develop/search/: search_index.json
docs/: aineko_cloud.md  aineko_dream.md  contributing.md  contributing_docs.md  index.md  quickstart.md  troubleshooting.md
docs/api_reference/: abstract_dataset.md  abstract_node.md  config.md  config_loader.md  dataset.md  dataset_consumer.md  dataset_producer.md  kafka_dataset.md  message_data.md  models.md  runner.md
docs/community/: index.md
docs/developer_guide/: aineko_project.md  cli.md  cli_guide.md  concepts.md  config_kafka.md  deeper_dive.md  node_implementation.md  pipeline_configuration.md
docs/examples/: aineko-dream.md  aineko_dream.md
docs/extras/: extra_nodes.md  fastapi.md  http_poller.md  index.md  intro.md  rest_poller.md  websocket.md  websocket_client.md  wss.md
docs/plugins/: fastapi-server.md  http-poller.md  intro.md  websocket-client.md
docs/start/: index.md  quickstart.md
docs/stylesheets/: extra.css
docstrings/: 404.html  index.html  objects.inv  sitemap.xml
docstrings/aineko_dream/: index.html
docstrings/community/: index.html
docstrings/search/: search_index.json
examples/: aineko-dream-code-generation-using-chatgpt-with-real-time-qa.md  code-generation-using-chatgpt-with-real-time-qa.md
landing-page/: 404.html  index.html  sitemap.xml
landing-page/aineko_dream/: index.html
landing-page/community/: index.html
landing-page/extras/: index.html
landing-page/search/: search_index.json
landing-page/start/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/aineko_dream/: index.html
latest/community/: index.html
latest/extras/: index.html
latest/search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/aineko_cloud/: index.html
site/contributing/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
tests/: conftest.py
tests/amber/: test_alerts.py  test_comparisons.py  test_metrics.py
tests/cli/: conftest.py  test_cli.py  test_provision.py  test_validate.py  test_visualize.py
tests/conf/: blank.yml  integration_test.yml  integration_test_empty_dataset.yml  integration_test_no_location_config.yml  integration_test_read.yml  integration_test_write.yml  invalid_node_log_to_dataset.yml  invalid_pipeline_log_to_dataset.yml  main.yml  node_log_to_dataset.yml  pipeline_dont_log_to_dataset.yml  pipeline_log_to_dataset.yml  test_deploy.yml  test_deploy_full.yml  test_deploy_multiple.yml  test_deploy_multiple_full.yml  test_invalid_pipeline.yml  test_pipeline.yml  test_pipeline3.yml  test_pipeline_runs.yml
tests/core/: conftest.py  test_config_loader.py  test_dataset.py  test_deploy_config_loader.py  test_node.py  test_provisioner.py  test_runner.py
tests/datasets/: test_kafka.py
tests/integration/: test_kafka_edge_cases.py  test_kafka_topic_creation.py  test_runner_with_kafka.py
tests/models/: conftest.py  test_config_schema.py  test_deploy_config.py  test_deploy_config_schema.py  test_deploy_config_schema_internal.py  test_log_to_dataset.py  (+1 more)
version/: 404.html  index.html  sitemap.xml
(+216 files in other folders)
